k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-core-service
  namespace: payment-core
  labels:
    app.kubernetes.io/name: payment-core-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: payment-core-service
